General updates, added the swop og collection, infinity swap in partners, fixed links and general spacing

--- a/frontend/index.css
+++ b/frontend/index.css
@@ -254,7 +254,7 @@ html {
     align-items: center;
     margin-bottom: 30px;
     margin-top: 30px;
-    width: 100%;
+    width: 90%;
 }
 
 .collectionCard {
@@ -287,6 +287,11 @@ html {
 #cc3 {
     border: 3px solid rgba(213, 18, 187, 0.8);
     box-shadow: 0px 0px 30px -5px rgba(213, 18, 187, 0.8);
+}
+
+#cc4 {
+    border: 3px solid rgba(164, 238, 255, 0.8);
+    box-shadow: 0px 0px 30px -5px rgba(164, 238, 255, 0.8);
 }
 
 .collectionCard img {
@@ -395,7 +400,7 @@ html {
 .footerContainer {
     height: auto;
     width: 100%;
-    margin-top: 70px;
+    margin-top: 100px;
     display: flex;
     flex-direction: row;
     justify-content: center;
